# tokio-compat

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: CI.yml
src/: lib.rs  prelude.rs
src/io/: futures_io.rs  mod.rs
src/runtime/: compat.rs  idle.rs  mod.rs  task_executor.rs
src/runtime/current_thread/: builder.rs  mod.rs  runtime.rs  task_executor.rs  tests.rs
src/runtime/threadpool/: builder.rs  idle.rs  mod.rs  task_executor.rs  tests.rs
tests/: rt_current_thread.rs  rt_threadpool.rs
tokio-compat-macros/: Cargo.toml
tokio-compat-macros/src/: lib.rs
