[package]
name = "tokio-compat"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.6"
edition = "2018"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/tokio-compat/0.1.6/tokio_compat/"
repository = "https://github.com/tokio-rs/tokio-compat"
homepage = "https://tokio.rs"
description = """
Compatibility between `tokio` 0.2 and legacy versions.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["io", "async", "non-blocking", "futures", "tokio"]

[features]
default = ["blocking", "rt-full", "sink"]
blocking = [
    "rt-current-thread",
    "tokio-02/blocking",
]
# enables the compat runtimes.
rt-current-thread = [
    "tokio-timer-02",
    "tokio-reactor-01",
    "tokio-executor-01",
    "tokio-current-thread-01",
    "tokio-02/rt-core",
    "tokio-02/rt-util",
    "tokio-02/time",
    "tokio-02/sync",
    "tokio-02/stream",
    "tokio-02/io-driver",
]
rt-full = [
    "tokio-02/rt-threaded",
    "rt-current-thread",
    "pin-project-lite"
]
sink = ["futures-util/sink"]

[dependencies]
futures-01 = { package = "futures", version = "0.1" }
futures-03-core = { package = "futures-core", version = "0.3.1" }
futures-util = { version = "0.3.1", default-features = false, features = ["compat"] }
tokio-02 = { package = "tokio", version = "0.2.4", default-features = false }
pin-project-lite = { version = "0.1", optional = true }

# runtime-only
tokio-timer-02 = { package = "tokio-timer", version = "0.2.12", optional = true }
tokio-reactor-01 = { package = "tokio-reactor", version = "0.1.11", optional = true  }
tokio-executor-01 = { package = "tokio-executor", version = "0.1.9", optional = true }
tokio-current-thread-01 = { package = "tokio-current-thread", version = "0.1", optional = true }

[dev-dependencies]
tokio-01 = { package = "tokio", version = "0.1" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
